@@ -1,4 +1,7 @@
 Changes with Apache 1.3.2
+ 
+  *) Update the mod_rewrite.html document to correctly reflect the situation
+     of the `proxy' (`[P]') feature. [Ralf S. Engelschall] PR#2679
 
   *) Fix `install-includes' sub-target of `install' target in top-level
      Makefile.tmpl: The umask+cp approach didn't work as expected (especially
